--- a/project/iot.html
+++ b/project/iot.html
@@ -10,71 +10,48 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            height: 100vh; /* Full height of the viewport */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
         }
         header {
             background-color: #333;
             color: white;
             padding: 15px 0;
+            width: 100%;
+            position: absolute;
+            top: 0;
             text-align: center;
-        }
-        section {
-            margin: 20px;
         }
         .video-container {
-            text-align: center;
-            margin-top: 20px;
+            max-width: 800px;  /* Maximum width for the video */
+            width: 100%; /* Allow it to resize but stay within the maximum width */
+            height: 450px; /* Fixed height */
+            margin: 0 auto; /* Center horizontally */
         }
         iframe {
             width: 100%;
-            height: 450px;
-            max-width: 800px;
+            height: 100%; /* Make the iframe fill the container */
             border: none;
-        }
-        .description {
-            background-color: #fff;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .description h2 {
-            margin-top: 0;
-        }
-        .description p {
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-            margin-top: 40px;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Introduction to IoT Project</h1>
+    <h1>IoT Project</h1>
 </header>
 
 <section>
     <div class="video-container">
-        <h2>Watch the Video on IoT Project</h2>
-        <!-- YouTube Embed Code: ใช้รหัสวิดีโอ 'edOhe70JyGM' -->
         <iframe src="https://www.youtube.com/embed/edOhe70JyGM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
     <div class="description">
-        <h2>About this IoT Project</h2>
-        <p><!-- ใส่คำอธิบายของโครงการ IoT ของคุณที่นี่ --></p>
-        <p><!-- เพิ่มคำอธิบายอื่น ๆ ที่ต้องการ --></p>
+        <p>ในโปรเจคนี้ผมได้สร้างเครื่องปัดน้ำฝนโดยใช้อุปกรณ์ IoT เช่น esp8226 หลอดไฟ switch โดยเขียนในโปรแกรม Arduino IDE ซึ่งเขียนเป็นภาษา C</p>
     </div>
 </section>
-
-<footer>
-    <p>&copy; 2025 IoT Project. All Rights Reserved.</p>
-</footer>
 
 </body>
 </html>
