--- a/project/ai.html
+++ b/project/ai.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IoT Project Video Presentation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            height: 100vh; /* Full height of the viewport */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            position: relative; /* For positioning the back button */
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 15px 0;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            text-align: center;
+        }
+        .video-container {
+            max-width: 800px;  /* Maximum width for the video */
+            width: 100%; /* Allow it to resize but stay within the maximum width */
+            height: 450px; /* Fixed height */
+            margin: 0 auto; /* Center horizontally */
+        }
+        iframe {
+            width: 100%;
+            height: 100%; /* Make the iframe fill the container */
+            border: none;
+        }
+        .description {
+            padding: 20px;
+            margin-top: 20px;
+        }
 
+        /* Back button styles */
+        .back-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .back-btn:hover {
+            background-color: #555;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>IoT Project</h1>
+</header>
+
+<section>
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/E0LCnaQhCQQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="description">
+        <p>ในโปรเจคนี้ผมได้สร้าง Model AI ตัวหนึ่งขึ้นมาใช้สำหรับการจำแนกน้องหา ซึ่งสามารถแยกได้ 3 สายพันธุ์</p>
+    </div>
+</section>
+
+<button class="back-btn" onclick="window.location.href='https://bestwatchara.github.io/myProject.github.io/myProject'">Back</button>
+
+</body>
+</html>
