--- a/project/softtest.html
+++ b/project/softtest.html
@@ -71,32 +71,10 @@
         a:hover {
             text-decoration: underline;
         }
-
-        /* เพิ่มการตกแต่งช่องกรอกข้อความ (input) */
-        input[type="text"], input[type="password"], textarea {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0 20px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        /* ปรับสไตล์ของปุ่ม */
-        button {
-            background-color: #3498db;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #2980b9;
-        }
     </style>
+    <!-- โหลดไลบรารี highlight.js สำหรับการทำ syntax highlighting -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
 </head>
 <body>
 
@@ -109,9 +87,23 @@
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test API ด้วย PostMan</h2>
     <pre><code class="json">
     {
-        "name": "John Doe",
-        "age": 30,
-        "city": "New York"
+         "id": 1,
+         "title": "Fjallraven - Foldsack No. 
+        1 Backpack, Fits 15 Laptops",
+         "price": 109.95,
+         "description": "Your perfect pack 
+        for everyday use and walks in the 
+        forest. Stash your laptop (up to 15 
+        inches) in the padded sleeve, your 
+        everyday",
+         "category": "men's clothing",
+         "image": 
+        "https://fakestoreapi.com/img/81fP
+        Kd-2AYL._AC_SL1500_.jpg",
+        "rating": {
+         "rate": 3.9,
+         "count": 120
+         }
     }
     </code></pre>
 
@@ -125,6 +117,11 @@
     <h2>ตัวอย่าง Test scenario ของการ Test UI ของ Website ด้วย</h2>
     <img src="https://github.com/user-attachments/assets/32f9fc60-cfa8-415a-a642-26b007453a51" alt="UI Testing Image">
 </div>
+
+<script>
+    // เรียกใช้ฟังก์ชันของ highlight.js เพื่อทำการไฮไลต์โค้ดทั้งหมดในหน้า
+    hljs.highlightAll();
+</script>
 
 </body>
 </html>
