--- a/project/softtest.html
+++ b/project/softtest.html
@@ -108,7 +108,7 @@
     </code></pre>
 
     <div class="center">
-        <img src="../img/menu.png" alt="Menu Image">
+        <img src="https://github.com/user-attachments/assets/1b21358e-b585-47cf-934a-b7de06886aea" alt="Menu Image">
     </div>
 
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test Performance ของ Website ด้วย JMeter</h2>
