--- a/project/softtest.html
+++ b/project/softtest.html
@@ -105,7 +105,7 @@
     </div>
 
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test Performance ของ Website ด้วย JMeter</h2>
-    <p>ใส่ตัวอย่างหรือคำอธิบายที่เกี่ยวข้องกับการทดสอบ Performance ด้วย JMeter ที่นี่</p>
+    <img src="https://github.com/user-attachments/assets/f2b614c4-96b4-497a-820e-5f49d8b57253" alt="Menu Image">
 
     <h2>ตัวอย่าง Test scenario ของการ Test UI ของ Website ด้วย</h2>
     <img src="https://github.com/user-attachments/assets/32f9fc60-cfa8-415a-a642-26b007453a51" alt="UI Testing Image">
