--- a/project/softtest.html
+++ b/project/softtest.html
@@ -82,8 +82,10 @@
     <h1>Software Testing</h1>
 
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test ภาษา Java ด้วย JUnit</h2>
-    <p>ใส่ตัวอย่างหรือคำอธิบายที่เกี่ยวข้องกับการทดสอบ Java ด้วย JUnit ที่นี่</p>
-
+    <div class="center">
+        <img src="https://github.com/user-attachments/assets/1b21358e-b585-47cf-934a-b7de06886aea" alt="Menu Image">
+    </div>
+    
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test API ด้วย PostMan</h2>
     <pre><code class="json">
     {
@@ -99,20 +101,22 @@
          }
     }
     </code></pre>
-
     <div class="center">
         <img src="https://github.com/user-attachments/assets/1b21358e-b585-47cf-934a-b7de06886aea" alt="Menu Image">
     </div>
 
-    <h2>ตัวอย่าง Test scenario และ Code ของการ Test Performance ของ Website ด้วย JMeter</h2>
-    <img src="https://github.com/user-attachments/assets/f2b614c4-96b4-497a-820e-5f49d8b57253" alt="Menu Image">
-
-    <h2>ตัวอย่าง Test scenario ของการ Test UI ของ Website ด้วย</h2>
-    <img src="https://github.com/user-attachments/assets/32f9fc60-cfa8-415a-a642-26b007453a51" alt="UI Testing Image">
+    <h2>ตัวอย่าง Test scenario ของการ Test Performance ของ Website ด้วย JMeter</h2>
+    <div class="center">
+        <img src="https://github.com/user-attachments/assets/f2b614c4-96b4-497a-820e-5f49d8b57253" alt="Menu Image">
+     </div>
+    
+    <h2>ตัวอย่าง Test scenario ของการ Test UI ของ Website ด้วย Selenium</h2>
+    <div class="center">
+        <img src="https://github.com/user-attachments/assets/32f9fc60-cfa8-415a-a642-26b007453a51" alt="UI Testing Image">
+    </div>
 </div>
 
 <script>
-    // เรียกใช้ฟังก์ชันของ highlight.js เพื่อทำการไฮไลต์โค้ดทั้งหมดในหน้า
     hljs.highlightAll();
 </script>
 
