--- a/project/softtest.html
+++ b/project/softtest.html
@@ -83,7 +83,7 @@
 
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test ภาษา Java ด้วย JUnit</h2>
     <div class="center">
-        <img src="https://github.com/user-attachments/assets/1b21358e-b585-47cf-934a-b7de06886aea" alt="Menu Image">
+        <img src="(https://github.com/user-attachments/assets/fad87c09-14c0-476c-8188-4ff2e93ed535" alt="Menu Image">
     </div>
     
     <h2>ตัวอย่าง Test scenario และ Code ของการ Test API ด้วย PostMan</h2>
