--- a/project/softtest.html
+++ b/project/softtest.html
@@ -160,18 +160,15 @@
         <img src="https://github.com/user-attachments/assets/1b21358e-b585-47cf-934a-b7de06886aea" alt="Menu Image">
     </div>
         <pre><code class="json">
-    {
-         "id": 1,
-         "title": "Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops",
-         "price": 109.95,
-         "description": "Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday",
-         "category": "men's clothing",
-         "image": "https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg",
-         "rating": {
-             "rate": 3.9,
-             "count": 120
-         }
-    }
+        {
+            "id" : 21,
+            "title": "test product",
+            "price": 13.5,
+            "description": "lorem ipsum 
+            set",
+            "image": "https://i.pravatar.cc",
+            "category": "electronic"
+        }
     </code></pre>
 
     <h2>ตัวอย่าง Test scenario ของการ Test Performance ของ Website ด้วย JMeter</h2>
